# ChatGPT-Paper-Reader

./: digested_paper.pkl  pyproject.toml  test.py
gpt_reader/: model_interface.py
