[tool.poetry]
name = "repl_nix_ChatGPT-Paper-Reader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^3.35.2"
pdfminer = "^20191125"
PyPDF2 = "^3.0.1"
tiktoken = "^0.4.0"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
